Make monitor more generic
feat(template.Monitor): Display Monitor integration (#110)
fix(integration.Datadog): Fix not updated monitors when more than 50 defined
change(\*.Monitor): Make monitors more generic (#110)
database_migration(Monitor): All monitor having an `external_link` containing a Datadog monitor URL (`/.*datadoghq.*/`) will be updated :
- `external_reference` will be populated from the monitor ID contained in the `external_link`
- `integration` will be populated with the value `datadog`
