# ProdManager/models/Maintenance.py
@@ -21,7 +21,7 @@ class Maintenance(db.Model):
   id = Column(Integer, primary_key=True)
   name = Column(String(), nullable=False)
   description = Column(String(), nullable=True)
-  external_reference = Column(String(), nullable=True)
+  external_reference = Column(String(), nullable=True, index=True)
   status = Column(Enum(MaintenanceStatus), nullable=False, default=MaintenanceStatus.SCHEDULED)
   scope_id = Column(Integer, ForeignKey('scope.id'), nullable=False)
   service_id = Column(Integer, ForeignKey('service.id'), nullable=False)
